tests/ui/parser/issues/issue-76437-unsafe.stderr
error: expected one of `extern` or `fn`, found keyword `pub`
  --> $DIR/issue-76437-unsafe.rs:4:12
   |
LL |     unsafe pub fn t() {}
   |     -------^^^
   |     |      |
   |     |      expected one of `extern` or `fn`
   |     help: visibility `pub` must come before `unsafe`: `pub unsafe`

error: aborting due to 1 previous error

